fix button contrast

--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,6 +1,6 @@
 .button {
-    @apply text-white font-bold py-2 px-4 rounded;
-    font-size: 0.8rem;
+    @apply font-bold py-2 px-4 rounded;
+    font-size: 1rem;
     transition: all ease 0.5s;
     background-color: var(--primary);
     box-shadow: 0 4px #fff;
